...
    @State private var selectedTab = 0
    
    var body: some View {
        TabView(selection: $selectedTab) {
            TaskView()
                .tabItem {
                    Label("Home", systemImage: "house.fill")
                }
                .tag(0)
            
            LogView()
                .tabItem {
                    Label("Log", systemImage: "list.bullet")
                }
                .tag(1)
            
            BlockView()
                .tabItem {
                    Label("Settings", systemImage: "gearshape.fill")
...
